codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_popup_npm_source.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: strip_osc8_for_snapshot(&popup)
---
  插 件
  Figma · 可 安 装  · ChatGPT Marketplace
  与 此 应 用 共 享 的 数 据 受 其 服 务 条 款 和 隐 私 政 策 . 了 解 详 情 .
  Turn Figma files into implementation context.

› 1. 返 回 插 件 列 表   返 回 插 件 列 表 。
  2. 安 装 插 件       立 即 安 装 此 插 件 。
     来 源           npm · @acme/figma-plugin@^1.2.0
     认 证           安 装 时 认 证
     技 能           design-review, extract-copy
     钩 子           PreToolUse (1), Stop (2)
     应 用           Figma, Slack
     MCP 服 务 器     figma-mcp, docs-mcp

  按  esc 关 闭 。
