codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_search_filtered.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  插 件
  浏 览 可 用 插 件 市 场 中 的 插 件 。
  3 个 可 用 插 件 中 已 安 装  0 个 。

  [全 部 插 件 ]  已 安 装 （ 0）   OpenAI 精 选   工 作 区   添 加 插 件 市 场

  sla
› [-] Slack     可 安 装    按  Enter 安 装 或 查 看 插 件 详 细 信 息 。

  space 启 用 /禁 用  · ←/→ 选 择 插 件 市 场  · enter 查 看 详 情  · esc 关 闭
