codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__profile_permissions_selection_popup_with_disallowed_full_access.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 80)"
---
  更 新 模 型 权 限

  1. 请 求 审 批             允 许 在 工 作 区 内 读 写 和 运 行 命 令 ； 需 要 时 请 求 审 批 。
  2. 代 我 审 批             仅 对 检 测 为 可 能 不 安 全 的 操 作 发 起 询 问 。
     完 全 访 问  (disabled) 允 许 不 受 沙 箱 限 制 地 访 问 系 统 。  (disabled: 已 被 要 求 配 置
                         停 用 。 )
› 3. 只 读 （ 当 前 ）         仅 允 许 读 取 ； 修 改 文 件 或 执 行 受 限 操 作 时 请 求 审 批 。

  按  enter 确 认 ， 或 按  esc 返 回
