codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_reset_available_hint.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: rendered
---
• 你有 2 次可用的用量限制重置机会。运行 /usage 使用。
